--- a/tarot/soul/index.html
+++ b/tarot/soul/index.html
@@ -5,7 +5,7 @@ style: "grid"
 ---
 {% if page.style == 'grid' %}
 
-  <details class="detailed-content" open="">
+  <details class="detailed-content">
     <summary class="detailed_title">Table of Content</summary>
     <nav id="TableOfContents" style="">
       <ul>
