--- a/tarot/soul/index.html
+++ b/tarot/soul/index.html
@@ -251,7 +251,7 @@ style: "grid"
       <div class="card_grid_item card_grid_medium_up_one_half">
         <div class="card_image_wrapper">
           <div class="card_image_container">
-            <img class="card_image" src="{{ site.url }}/assets/images/tarot/{{ section.title | replace: ' ', '_' }}/{{ group.title | replace: ' ', '_' }}/{{ card.title | replace: ' ', '_' }}.webp">
+            <img class="card_image" src="{{ site.url }}/assets/images/tarot/Soul/{{ section.title | replace: ' ', '_' }}/{{ group.title | replace: ' ', '_' }}/{{ card.title | replace: ' ', '_' }}.webp">
           </div>
         </div>
       </div>
