--- a/tarot/soul/index.html
+++ b/tarot/soul/index.html
@@ -52,7 +52,10 @@ style: "grid"
 
   {% assign back_list = '' | split: '/' %}
   {% assign this_card_back = '' | split: '/' %}
+  {% assign this_card = this_card | push: 'Card Back' %}
+  {% assign this_card = this_card | push: 'Card Back' %}
   {% assign this_card_back = this_card_back | push: '/assets/images/tarot/Soul/Back.png' %}
+  {% assign back_list = back_list | push: this_card_back %}
   {% assign back_list = back_list | push: this_card_back %}
   {% assign back_list_container = '' | split: '/' %}
   {% assign back_list_container = back_list_container | push: back_list %}
