--- a/_creative/sourcardtarot.html
+++ b/_creative/sourcardtarot.html
@@ -2,6 +2,10 @@
 title: "Soul Cards Tarot"
 layout: default
 style: "grid"
+desc: "Tarot Cards Set"
+cover:
+  url: 'soulcardtarot.png'
+  format: 'png'
 ---
 {% if page.style == 'grid' %}
 
