--- a/_creative/sourtarot.html
+++ b/_creative/sourtarot.html
@@ -1,10 +1,10 @@
 ---
-title: "Soul Cards Tarot"
+title: "Soul Tarot"
 layout: default
 style: "grid"
 desc: "Tarot Cards Set"
 cover:
-  url: 'soulcardtarot.png'
+  url: 'soultarot.png'
   format: 'png'
 ---
 {% if page.style == 'grid' %}
