--- a/_creative/cssfilter.html
+++ b/_creative/cssfilter.html
@@ -339,7 +339,7 @@ $(document).ready(() => {
 {% capture css_source %}
 .pixel {
   display: inline-block;
-  background-color: #000;
+  background-color: #ffd43b;
   width: 50px;
   height: 50px;
 }
