--- a/_creative/cssfilter.html
+++ b/_creative/cssfilter.html
@@ -372,9 +372,11 @@ $(document).ready(() => {
   <p>For this code to work well the starting color needs to be black. If your icon set isn't black you can prepend "<code>brightness(0) saturate(100%)</code>" to your filter property which will first turn the icon set to black.</p>
   <p>For as long as I worked on creating this solution from multiple resources I found some had spent far longer to create this already completed solution. Only slightly modified to focus on HEX colors.</p>
   <br />
+  {% include window_mac_start.html title="CSS filter Generator"%}
   <div>
     {{ html_source }}
   </div>
+  {% include window_mac_end.html %}
 
   {{ js_link_source }}
   <script type="text/javascript">
