--- a/_creative/cssfilter.html
+++ b/_creative/cssfilter.html
@@ -376,7 +376,7 @@ $(document).ready(() => {
   <p>For as long as I worked on creating this solution from multiple resources I found some had spent far longer to create this already completed solution. Only slightly modified to focus on HEX colors.</p>
   <br />
   {% include window_mac_start.html title="CSS filter Generator"%}
-  <div clss="functions-container">
+  <div class="functions-container">
     {{ html_source }}
   </div>
   {% include window_mac_end.html %}
