--- a/_creative/cssfilter.html
+++ b/_creative/cssfilter.html
@@ -322,7 +322,7 @@ $(document).ready(() => {
     if (result.loss < 1) {
       lossMsg = 'This is a perfect result.';
     } else if (result.loss < 5) {
-      lossMsg = 'The is close enough.';
+      lossMsg = 'This is close enough.';
     } else if (result.loss < 15) {
       lossMsg = 'The color is somewhat off. Consider running it again.';
     } else {
