--- a/_creative/cssfilter.html
+++ b/_creative/cssfilter.html
@@ -370,11 +370,12 @@ $(document).ready(() => {
 </style>
 <!-- FUNCTIONS -->
 <div id="functions">
-  <blockquote>CSS filter generator to convert from black to target hex color</blockquote>
-  <p>The goal was to be able to create custom style sheets and allow for the coloring of icons for <a href="{{ site.url }}" target="_blank">{{ site.name }}</a>.</p>
-  <p>For this code to work well the starting color needs to be black. If your icon set isn't black you can prepend "<code>brightness(0) saturate(100%)</code>" to your filter property which will first turn the icon set to black.</p>
-  <p>For as long as I worked on creating this solution from multiple resources I found some had spent far longer to create this already completed solution. Only slightly modified to focus on HEX colors.</p>
-  <br />
+  <blockquote>
+    <p>The goal was to be able to create custom style sheets and allow for the coloring of icons for <a href="{{ site.url }}" target="_blank">{{ site.name }}</a>.</p>
+    <p>For this code to work well the starting color needs to be black. If your icon set isn't black you can prepend "<code>brightness(0) saturate(100%)</code>" to your filter property which will first turn the icon set to black.</p>
+    <p>For as long as I worked on creating this solution from multiple resources I found some had spent far longer to create this already completed solution. Only slightly modified to focus on HEX colors.</p>
+  </blockquote>
+  <h1 id="function">CSS filter generator to convert from black to target hex color</h1>
   {% include window_mac_start.html title="CSS filter Generator"%}
   <div class="functions-container">
     {{ html_source }}
@@ -402,7 +403,6 @@ $(document).ready(() => {
 {{ js_link_source }}
 {{ html_source }}
 {% endhighlight %}
-
 
   <h1 id="usage">Usage</h1>
 
