--- a/_creative/sourtarot.html
+++ b/_creative/sourtarot.html
@@ -6,6 +6,7 @@ desc: "Tarot Cards Set"
 cover:
   url: 'soultarot.png'
   format: 'png'
+excerpt: "Tarot Cards Set"
 ---
 {% if page.style == 'grid' %}
   <details class="detailed-content">
