--- a/_creative/searchcenter.html
+++ b/_creative/searchcenter.html
@@ -1,6 +1,6 @@
 ---
 layout: null
-title: "Search Center"
+title: "Engines"
 desc: "Search Engines Collection"
 cover:
   url: 'searchcenter.png'
@@ -558,7 +558,7 @@ engines:
           {% endfor %}
         </div>
         <div class="text-center text-grey font-lighter">
-          <div><small>© Meniny, 2020, All rights reserved.</small></div>
+          <div><small>© {{ site.author }}, 2020, All rights reserved.</small></div>
         </div>
       </div>
     </div>
