--- a/_creative/searchcenter.html
+++ b/_creative/searchcenter.html
@@ -332,6 +332,7 @@ engines:
 
     .m-bottom {
       margin-bottom: 20px;
+      max-width: 600px;
     }
 
     /* Amazing flex utility classes */
