--- a/_creative/searchcenter.html
+++ b/_creative/searchcenter.html
@@ -588,7 +588,7 @@ engines:
           {% endfor %}
         </div>
         <div class="text-center text-grey font-lighter">
-          <div><small>© {{ site.author }}, 2020, All rights reserved.</small></div>
+          <div><small>© {{ site.author }} (2020) All rights reserved.</small></div>
         </div>
       </div>
     </div>
