--- a/creative/index.html
+++ b/creative/index.html
@@ -2,8 +2,9 @@
 layout: default
 title: "Creative"
 description: "Build, Test, Discover and Create the New World."
-style: 'overlay_fashion'
+#style: 'overlay_fashion'
 #style: 'overlay_box'
+style: 'overlay_fade_detail'
 cols: 2
 ---
 {% assign converted_list = '' | split: '/' %}
@@ -36,6 +37,17 @@ cols: 2
 		{% assign tempSubArray = tempSubArray | push: create.desc %}
 		{% assign tempSubArray = tempSubArray | push: the_creative_img %}
 		{% assign tempSubArray = tempSubArray | push: create.url %}
+		
+	{% elsif page.style == 'overlay_fade_detail' %}
+
+		<!-- element[0]: title -->
+		<!-- element[1]: desc -->
+		<!-- element[2]: image -->
+		<!-- element[3]: url -->
+		{% assign tempSubArray = tempSubArray | push: create.title %}
+		{% assign tempSubArray = tempSubArray | push: create.desc %}
+		{% assign tempSubArray = tempSubArray | push: the_creative_img %}
+		{% assign tempSubArray = tempSubArray | push: create.url %}
 
 	{% endif %}
 
@@ -46,7 +58,15 @@ cols: 2
 {% assign outer_list = outer_list | push: converted_list %}
 
 {% if page.style == 'overlay_fashion' %}
+
 	{% include grid_image_overlay_fashion_list.html list=outer_list desc=" " cols=page.cols %}
+	
 {% elsif page.style == 'overlay_box' %}
+
 	{% include grid_image_overlay_box_list.html list=outer_list desc=" " cols=page.cols %}
+
+{% elsif page.style == 'overlay_fade_detail' %}
+
+	{% include grid_image_overlay_fade_detailed_list.html list=outer_list desc=" " cols=page.cols %}
+
 {% endif %}
