--- a/_creative/searchcenter.html
+++ b/_creative/searchcenter.html
@@ -283,6 +283,7 @@ engines:
       line-height: 1.3;
       min-height: 100vh;
       color: #333333;
+      background: #ededed;
       font-family: "Ubuntu", sans-serif;
     }
 
