--- a/about/index.html
+++ b/about/index.html
@@ -9,6 +9,6 @@ hero:
 #post_has_front_header: true
 ---
 <br />
-{% include card_profile_bubble.html title=site.name subtitle=site.alias desc=site.description url=site.url github=site.github_url email=site.email image="/assets/images/avatar_painting.jpg" maxwidth="100%" %}
+{% include card_profile_bubble.html title=site.name subtitle=site.alias desc=site.description url=site.url github=site.github_url email=site.email image="/assets/images/avatar.png" maxwidth="100%" %}
 <br />
 {% include signature.html %}
