--- a/_creative/searchcenter.html
+++ b/_creative/searchcenter.html
@@ -552,7 +552,7 @@ engines:
     }
 
     function back2home() {
-      redirect2('https://lasenhorita.github.io/');
+      redirect2('{{ site.url }}');
     }
 
     function searchOn(engineUrl) {
