--- a/about/index.html
+++ b/about/index.html
@@ -8,7 +8,6 @@ hero:
   url: 'HERO_PAINTINGS_V_0000.jpg'
 #post_has_front_header: true
 ---
-<br />
+{% include gap.html %}
 {% include card_profile_bubble.html title=site.name subtitle=site.alias desc=site.description url=site.url github=site.github_url email=site.email image="/assets/images/avatar.png" maxwidth="100%" %}
-<br />
 {% include signature.html %}
