--- a/about/index.html
+++ b/about/index.html
@@ -2,12 +2,15 @@
 layout: default
 title: "About"
 active_title: "About"
-#date: "2020-05-06"
-hero:
-  format: 'jpeg'
-  url: 'HERO_PAINTINGS_V_0000.jpg'
-#post_has_front_header: true
 ---
+<style type="text/css">
+  .dark .profile-image img {
+    content: url('https://picsew.cn/assets/images/avatar.png') !important;
+  }
+  .light .profile-image img {
+    content: url('https://picsew.cn/assets/images/avatar_color.png') !important;
+  }
+</style>
 {% include gap.html %}
-{% include card_profile_bubble.html title=site.name subtitle=site.alias desc=site.description url=site.url github=site.github_url email=site.email image="/assets/images/avatar.png" maxwidth="100%" %}
+{% include card_profile_bubble.html title=site.name subtitle=site.alias desc=site.description url=site.url github=site.github_url email=site.email image="" maxwidth="100%" %}
 {% include signature.html %}
