--- a/home/index.html
+++ b/home/index.html
@@ -44,7 +44,8 @@ title: "Home"
           <header>
             <p>By {{ site.author }}</p>
             <h1>{{ site.alias }}</h1>
-            <a href="#subscribe" class="tattoo-btn">Subscribe</a>
+            <!-- <a href="#subscribe" class="tattoo-btn">Subscribe</a> -->
+            <a href="{{ site.url }}/about/" class="tattoo-btn">More</a>
           </header>
         </div>
       </div>
@@ -124,7 +125,7 @@ title: "Home"
         </div>
       </section>
 
-      <section class="follow">
+      <!-- <section class="follow">
         <header class="sidebar-header">
           <h2>Follow me</h2>
         </header>
@@ -133,9 +134,9 @@ title: "Home"
             <a href="{{ site.github_url }}"><i class="fa fa-github"></i></a>
           </div>
         </div>
-      </section>
+      </section> -->
 
-      <section class="subscribe" id="subscribe">
+      <!-- <section class="subscribe" id="subscribe">
         <header class="sidebar-header">
           <h2>Subscribe</h2>
         </header>
@@ -148,8 +149,7 @@ title: "Home"
             </form>
           </div>
         </div>
-
-      </section>
+      </section> -->
 
     </div>
   </div>
