--- a/home/index.html
+++ b/home/index.html
@@ -68,7 +68,7 @@ title: "Home"
           <div class="post-btm-bar">
             <button class="likes"><i class="fa fa-tags"></i> {{ post.category }}</button>
             <!-- <button class="replies">View <span class="count">Detail</span></button> -->
-            <a class="replies">View Detail</a>
+            <a class="replies" href="{{ post.url }}">View Detail</a>
           </div>
         </div>
       </div>
