--- a/home/index.html
+++ b/home/index.html
@@ -42,10 +42,10 @@ title: "Home"
       <div class="tattoo-row">
         <div class="tattoo-col">
           <header>
-            <p>By {{ site.author }}</p>
-            <h1>{{ site.alias }}</h1>
+            <p>Welcome to</p>
+            <h1>Picsew.cn</h1>
             <!-- <a href="#subscribe" class="tattoo-btn">Subscribe</a> -->
-            <a href="{{ site.url }}/about/" class="tattoo-btn">More</a>
+            <a href="{{ site.url }}/about/" class="tattoo-btn">About Me</a>
           </header>
         </div>
       </div>
