--- a/404.html
+++ b/404.html
@@ -1,8 +1,11 @@
 ---
 #layout: error_clip
 #layout: error_neon
-layout: error_simple
+#layout: error_simple
+#layout: error_tattoo
 code: '404'
 error: 'Page Not Found'
+title: 'Page Not Found'
 permalink: /404.html
+description: "This is not the page you are looking for."
 ---
