--- a/403.html
+++ b/403.html
@@ -4,5 +4,7 @@
 layout: error_simple
 code: '403'
 error: 'Forbidden'
+title: 'Forbidden'
 permalink: /403.html
+description: "This is not the page you are looking for."
 ---
