--- a/403.html
+++ b/403.html
@@ -1,7 +1,8 @@
 ---
 #layout: error_clip
 #layout: error_neon
-layout: error_simple
+#layout: error_simple
+layout: error_tattoo
 code: '403'
 error: 'Forbidden'
 title: 'Forbidden'
