--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 #layout: error_clip
 #layout: error_neon
 #layout: error_simple
-#layout: error_tattoo
+layout: error_tattoo
 code: '404'
 error: 'Page Not Found'
 title: 'Page Not Found'
